--- a/listas.html
+++ b/listas.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./assets/css/webComponents.css">
 </head>
 <body>
+    <header>
+        <h1>Listas</h1>
+        <p>Aca puedes encontrar todas las listas, y las que sigues. </p>
+    </header>
     <h1>Listas seguidas por mi</h1>
     <section id="seguidas" style="display: flex;"></section>
 
