--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <a href="./index.html"><img src="/assets/img/logo_gris.png" alt="Logo PhysTrainer"></a>
             <ul>
-                <li><a>Catálogo de problemas</a></li>
+                <li><a>Catálogo de problemas de olimpiada</a></li>
                 <li><a>Entrenar Teórico</a></li>
                 <li><a>Entrenar Experimental</a></li>
                 <li><a href="./login">Iniciar Sesión</a></li>
