--- a/panel.html
+++ b/panel.html
@@ -11,11 +11,10 @@
 </head>
 <body style="padding: 0; margin: 0;">
     <!-- Nav Bar y top -->
-    <header>
+    <header class="header-portal">
         <nav>
             <a href="./index.html"><img src="/assets/img/logo_gris.png" alt="Logo PhysTrainer"></a>
                 <ul>
-                    <li><a>Catálogo de problemas de olimpiada</a></li>
                     <li><a>Entrenar Teórico</a></li>
                     <li><a>Entrenar Experimental</a></li>
                     <li><a href="./login">Cerrar Sesión</a></li>
@@ -27,13 +26,12 @@
     
     </header>
 
-    <aside>
+    <aside> 
         <ul>
             <li><h3>SOBRE MÍ</h3></li>
             <li>Mis grupos</li>
             <li>Mis listas</li>
             <li>Análisis de entrenamiento</li>
-
             <li><h3>AJUSTES DE CUENTA</h3></li>
             <li>Perfil</li>
             <li>Reportar un problema</li>
