add Searchbar flexbox

--- a/panel.html
+++ b/panel.html
@@ -13,12 +13,19 @@
     <!-- Nav Bar y top -->
     <header class="header-portal">
         <nav>
-            <a href="./index.html"><img src="/assets/img/logo_gris.png" alt="Logo PhysTrainer"></a>
-                <ul>
-                    <li><a>Entrenar Teórico</a></li>
-                    <li><a>Entrenar Experimental</a></li>
-                    <li><a href="./login">Cerrar Sesión</a></li>
-                </ul>
+            <form action="https://google.com/search" target="_blank" type="GET">
+                <div class="inputWithIcon search-bar">
+                    <input type="text" name="search-bar" >
+                </div>
+             </form>
+             <div class="div-img">
+                <a href="./index.html"><img src="/assets/img/logo_gris.png" alt="Logo PhysTrainer"></a>
+            </div>  
+            <ul>
+                <li><a>Entrenar Teórico</a></li>
+                <li><a>Entrenar Experimental</a></li>
+                <li><a href="./login">Cerrar Sesión</a></li>
+            </ul>
         </nav>
 
         <section class="panel-hero">
