Added search icon

--- a/panel.html
+++ b/panel.html
@@ -16,6 +16,8 @@
             <form action="https://google.com/search" target="_blank" type="GET">
                 <div class="inputWithIcon search-bar">
                     <input type="text" name="search-bar" >
+                    <i data-feather="search" aria-hidden="true"></i>
+
                 </div>
              </form>
              <div class="div-img">
@@ -76,7 +78,12 @@
      <!-- FOOTER -->
      
     <footer></footer>
-    
+    <script src="https://unpkg.com/feather-icons"></script>
+
+    <script>
+        feather.replace()
+    </script>   
+
     <script src="https://unpkg.com/blobs/v2"></script>
 
     <script src="./assets/js/colors.js"></script>
