--- a/listas.html
+++ b/listas.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Listas</h1>
-        <p>Aca puedes encontrar todas las listas, y las que sigues. </p>
+        <p>Acá puedes encontrar todas las listas, y las que sigues. </p>
     </header>
     <h1>Listas seguidas por mi</h1>
     <section id="seguidas" style="display: flex;"></section>
