--- a/panel.html
+++ b/panel.html
@@ -15,7 +15,7 @@
         <nav>
             <form action="https://google.com/search" target="_blank" type="GET">
                 <div class="inputWithIcon search-bar">
-                    <input type="text" name="search-bar" >
+                    <input type="text" name="search-bar" class="search-bar">
                     <i data-feather="search" aria-hidden="true"></i>
 
                 </div>
@@ -62,22 +62,29 @@
 
                 <!-- Mis Listas -->
                 <section class="mis-listas">
-                    <h3>Mis Listas</h3>
-                    <div class="resumen-listas" style="background:lightgreen ;">
-                        <div class="view-listas-izquierda" style="background: lightpink;" >
+                    <h1>Mis Listas</h1>
+                    <div class="resumen-listas" >
+                        <div class="view-listas-izquierda"  >
+                            <form action="">
+                            <div class="inputWithIcon search-bar">
+                                <input type="text" name="search-bar" class="search-bar">
+                                <i data-feather="search" aria-hidden="true"></i>
+                            </div>
+                            </form>
+
                             <ul>
-                                <li>Barra de búsqueda</li>
+                                
                                 <li>Lista 1</li>
                                 <li>Lista 2</li>
                                 <li>Lista 3</li>
                                 <li>Lista 4</li>
                             </ul>
                         </div>
-                        <div class="view-listas-derecha"  style="background: lightskyblue;">
-                            <div class="lista-contenido-descripcion" style="background: lightsalmon;">
+                        <div class="view-listas-derecha" >
+                            <div class="lista-contenido-descripcion" >
                                 <h2>Lista 1</h2>
                             </div>
-                            <div class="lista-mosaico-problemas" style="background: lightgoldenrodyellow;">
+                            <div class="lista-mosaico-problemas" >
                                 <div>P1</div>
                                 <div>P2</div>
                                 <div>P3</div>
