--- a/panel.html
+++ b/panel.html
@@ -85,16 +85,16 @@
                                 <h2>Lista 1</h2>
                             </div>
                             <div class="lista-mosaico-problemas" >
-                                <div>P1</div>
-                                <div>P2</div>
-                                <div>P3</div>
-                                <div>P4</div>
-                                <div>P5</div>
-                                <div>P6</div>
-                                <div>P7</div>
-                                <div>P8</div>
-                                <div>P9</div>
-                                <div>P10</div>
+                                <div data-tilt>P1</div>
+                                <div data-tilt>P2</div>
+                                <div data-tilt>P3</div>
+                                <div data-tilt>P4</div>
+                                <div data-tilt>P5</div>
+                                <div data-tilt>P6</div>
+                                <div data-tilt>P7</div>
+                                <div data-tilt>P8</div>
+                                <div data-tilt>P9</div>
+                                <div data-tilt>P10</div>
                             </div>
                         </div>
                     </div>
@@ -124,6 +124,7 @@
     <script src="https://unpkg.com/blobs/v2"></script>
     <script src="./assets/js/colors.js"></script>
     <script src="./assets/js/Phystrainer.js"></script>
+    <script type="text/javascript" src="./assets/js/vanilla-tilt.js"></script>
     <script>
         let c = new Colors();
         c.generateBlobsInDiv(document.querySelector(".panel-hero"), 5);
