--- a/phystrainer-notebook/index.html
+++ b/phystrainer-notebook/index.html
@@ -7,7 +7,7 @@
     <title>Phystrainer Notebook Demo</title>
 </head>
 <body>
-    <div id="notebook">
+<pt-notebook>
         <pt-notebook-cell-markdown>
 # Phystrainer Notebooks
 Phystrainer notebooks take inspiration from Jupyter Notebooks to provide flexibility when reading and writing problems in Phystrainer. There are two types of cells:
@@ -63,10 +63,9 @@ We use [Katex](https://katex.org/) from KhanAcademy to render $\LaTeX$ inside ce
 <span style='font-family: "Comic Sans MS", cursive, sans-serif; color: blue; font-size: 2rem;'>Hola Skewes! ¿Qué te parece?</span>
 Voy a pulir un poco los componentes de las celdas para quitar todos los bugs (en esta hay otro con las comillas lol). Igual iré pensando en los tipos de inputs que podemos recibir (eg, opción múltiple, para expresiones simbólicas con https://github.com/Khan/KAS, numérico con rango, etc).
         </pt-notebook-cell-markdown>
-    </div>
 
-    <script type="module" src="./PTNotebookCellMarkdownElement.js"></script>
-    <script type="module" src="./PTNotebookCellQuestionElement.js"></script>
-
+        <p>aa</p>
+</pt-notebook>
+        <script src="./PTNotebookElement.js" type="module"></script>
 </body>
 </html>
