Added docs about questions

--- a/phystrainer-notebook/index.html
+++ b/phystrainer-notebook/index.html
@@ -17,7 +17,7 @@ Phystrainer notebooks take inspiration from Jupyter Notebooks to provide flexibi
 _Hint: Double click any of the cells to begin editing. Double click outside to exit edit mode._
 > Important: Only Markdown cells are currently available.
         </pt-notebook-cell-markdown>
-        <pt-notebook-cell-markdown>
+       <!--  <pt-notebook-cell-markdown>
 # Heading 1
 ## Heading 2
 ### Heading 3
@@ -62,10 +62,8 @@ We use [Katex](https://katex.org/) from KhanAcademy to render $\LaTeX$ inside ce
 ## Lorem Ipsum
 <span style='font-family: "Comic Sans MS", cursive, sans-serif; color: blue; font-size: 2rem;'>Hola Skewes! ¿Qué te parece?</span>
 Voy a pulir un poco los componentes de las celdas para quitar todos los bugs (en esta hay otro con las comillas lol). Igual iré pensando en los tipos de inputs que podemos recibir (eg, opción múltiple, para expresiones simbólicas con https://github.com/Khan/KAS, numérico con rango, etc).
-        </pt-notebook-cell-markdown>
-
-        <p>aa</p>
+        </pt-notebook-cell-markdown> -->
 </pt-notebook>
-        <script src="./PTNotebookElement.js" type="module"></script>
+        <script src="./notebook/PTNotebookElement.js" type="module"></script>
 </body>
 </html>
