--- a/phystrainer-notebook/index.html
+++ b/phystrainer-notebook/index.html
@@ -17,7 +17,34 @@ Phystrainer notebooks take inspiration from Jupyter Notebooks to provide flexibi
 _Hint: Double click any of the cells to begin editing. Double click outside to exit edit mode._
 > Important: Only Markdown cells are currently available.
         </pt-notebook-cell-markdown>
-       <!--  <pt-notebook-cell-markdown>
+        <pt-notebook-cell-markdown>
+## Questions
+Support for Phystrainer questions is still under development. Check [questions](./question/README.md).
+> Last update: 2021-10-23
+        </pt-notebook-cell-markdown>
+        <pt-notebook-cell-markdown>
+## Keyboard shortcuts
+### When editing cells
+* <kbd>Esc</kbd> Stops editing
+* <kbd>Ctrl</kbd> <kbd>Enter</kbd> Stops editing
+
+### When not editing cells
+* <kbd>Enter</kbd> Enters edit mode
+* <kbd>Delete</kbd> Deletes the cell
+* <kbd>Backspace</kbd> Deletes the cell
+* <kbd>X</kbd> Deletes the cell
+        </pt-notebook-cell-markdown>
+        <pt-notebook-cell-markdown>
+## Roadmap
+1. Define questions requirements and Format
+2. Fix a bug that causes edit mode to appear the wrong font-size
+3. Fix $\KaTeX$ bugs
+4. Fix quote escaping bugs
+5. Add functionality for reordering cells
+6. Add functionality for inserting cells at a given position
+7. **LOTS OF TESTING!!!**
+        </pt-notebook-cell-markdown>
+        <pt-notebook-cell-markdown>
 # Heading 1
 ## Heading 2
 ### Heading 3
@@ -62,7 +89,7 @@ We use [Katex](https://katex.org/) from KhanAcademy to render $\LaTeX$ inside ce
 ## Lorem Ipsum
 <span style='font-family: "Comic Sans MS", cursive, sans-serif; color: blue; font-size: 2rem;'>Hola Skewes! ¿Qué te parece?</span>
 Voy a pulir un poco los componentes de las celdas para quitar todos los bugs (en esta hay otro con las comillas lol). Igual iré pensando en los tipos de inputs que podemos recibir (eg, opción múltiple, para expresiones simbólicas con https://github.com/Khan/KAS, numérico con rango, etc).
-        </pt-notebook-cell-markdown> -->
+        </pt-notebook-cell-markdown>
 </pt-notebook>
         <script src="./notebook/PTNotebookElement.js" type="module"></script>
 </body>
