Agregar bug. Deberiamos usar gihtub issues lol pero q flojera

--- a/phystrainer-notebook/index.html
+++ b/phystrainer-notebook/index.html
@@ -36,6 +36,7 @@ Support for Phystrainer questions is still under development. Check [questions](
         </pt-notebook-cell-markdown>
         <pt-notebook-cell-markdown>
 ## Roadmap
+0. Fix a bug that causes HTML tags to not be rendered inside markdown. 
 1. Define questions requirements and Format
 2. Fix a bug that causes edit mode to appear the wrong font-size
 3. Fix $\KaTeX$ bugs
