Exercises now feature complete

--- a/public/exercise.html
+++ b/public/exercise.html
@@ -10,7 +10,32 @@
         <header>
 
         </header>
-        <article>
+        <pt-exercise>
+{
+        "title": "The Millenium Problems", 
+        "items": [
+                {
+                        "type": "markdown", 
+                        "content": "I am a cell"
+                }, 
+                {
+                        "type": "question", 
+                        "content": {
+                                "type": "PTQuestion.multipleChoice", 
+                                "dataPoints": [
+                                        {"type": "choice", "value": "Apple"},
+                                        {"type": "choice", "value": "Microsoft"},
+                                        {"type": "choice", "value": "Google"},
+                                        {"type": "choice", "value": "Phystrainer"}
+                                ]
+                        }
+                }
+        ]
+}
+        </pt-exercise>
+
+
+<!--         <article>
                 <pt-exercise-cell-markdown>
                         {
                                 "content": "I am a cell"
@@ -29,20 +54,13 @@
                                 }
                         }
                 </pt-exercise-cell-question>
-                <p>Hello!!      </p>
+                <p>Hello!!      </p> -->
         </article>
 
-        <script type="module">
-                import 'https://cdn.jsdelivr.net/npm/sortablejs'
-                Sortable.create(document.querySelector('article'), {
-                        fallbackOnBody: false,
-                        removeCloneOnHide: true,
-                })
-        </script>
 
 
 
-
+        <script src="./components/PTExercise/PTExercise.js" type="module"></script>
         <script src="./components/PTExerciseCell/PTExerciseCellMarkdown.js" type="module"></script>
         <script src="./components/PTExerciseCell/PTExerciseCellQuestion.js" type="module"></script>
 </body>
